v1.0.9b -
Additions:
* Add new Vanilla Tweaks option "Mars Double Tap Window", which determines the number of frames where a repeated movement input is counted as a double tap for activating Mars's charge
/newline/
v1.0.9a -
Additions:
* Game:
	- ClearErasedEnemies(): void
	- GetShopVisits(): int
	- AddShopVisits(count: int): void
* EntitySlot:
	- GetShellGameAnimationIndex() : int
	- SetShellGameAnimationIndex(index: int) : void
	- GetTriggerTimerNum() : int
	- SetTriggerTimerNum(num: int) : void
- Sorry about the startup line in 1.0.9, half of it was a lie, now it's not! This update enables "file map" functionality, speeding up file lookup, positively affecting the startup time. It shouldn't cause any issue, but if it does don't hesitate to report issues, in the meantime you can disable it in REPENTOGON's options window.
/newline/
* Bug fixes
    - Fixed a bug that caused the giveitem command to crash when the object to
    give was reduced to a single letter
	- Fix "goto [s/x]." command autocomplete
	- Fixed incorrect type set for Slot->_timeout (int -> short)
/newline/
v1.0.9 -
Modified:
* Callbacks:
	- MC_PRE_PLAYERHUD_TRINKET_RENDER: now provides [Vector] CropOffset parameter and accepts CropOffset vector in the return table.
* EntityPlayer:
	- AddInnateCollectible() now uses a system separate from item wisps, still doesn't save on game exit though!
	- Change to HasCollectible and GetCollectibleNum:
		new optional boolean (IgnoreSpoof), ignores collectible block when set to true
* Game:
	- ShowGenericLeaderboard no longer fades to main menu
* PersistentGameData:
	- TryUnlock now accepts an optional boolean to prevent popping up with the achievement paper for modded achievements
/newline/
Additions:
* Game:
	- SetDizzyAmount(amount, intensity)
	- GetDizzyAmount()
* PlayerManager:
	- AnyPlayerTypeHasTrinket(PlayerType, TrinketType, IgnoreModifiers = false)
	- AnyPlayerTypeHasCollectible(PlayerType, CollectibleType, IgnoreModifiers = false)
* Lootlist: