@@ -33,12 +33,20 @@ LUA_FUNCTION(Lua_SnapToPosition)
 	return 0;
 }
 
+LUA_FUNCTION(Lua_IsPosVisible) {
+	Camera* camera = *lua::GetUserdata<Camera**>(L, 1, lua::metatables::CameraMT);
+	Vector* vector = lua::GetUserdata<Vector*>(L, 2, lua::Metatables::VECTOR, "Vector");
+	lua_pushboolean(L, camera->IsPosVisible(vector));
+	return 1;
+}
+
 static void RegisterCamera(lua_State* L) {
 	lua::RegisterFunction(L, lua::Metatables::ROOM, "GetCamera", Lua_GetCamera);
 
 	luaL_Reg functions[] = {
 		{ "SetFocusPosition", Lua_CameraSetFocusPosition },
 		{ "SnapToPosition", Lua_SnapToPosition },
+		{ "IsPosVisible", Lua_IsPosVisible },
 		{ NULL, NULL }
 	};
 	lua::RegisterNewClass(L, lua::metatables::CameraMT, lua::metatables::CameraMT, functions);
