@@ -4,6 +4,8 @@ Additions:
 /newline/
 v1.0.9a -
 Additions:
+* Camera:
+	- IsPosVisible(position: Vector) : bool
 * Game:
 	- ClearErasedEnemies(): void
 	- GetShopVisits(): int
